# phosh-mobile-settings

./: .gitignore  .gitlab-ci.yml  HACKING.md  NEWS  meson.build  sources.list
.github/workflows/: apt.yml  build.yml  sync.yml
.gitlab-ci/: debian.Dockerfile  run-docker.sh
data/: leak-suppress.txt  meson.build  mobi.phosh.MobileSettings.metainfo.xml.in
data/icons/: meson.build
debian/: changelog  control  not-installed  phosh-mobile-settings.install
plugins/librem5/: meson.build  ms-plugin-librem5-panel.c
plugins/librem5/dbus/: meson.build
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  en_GB.po  fa.po  fi.po  fr.po  he.po  hi.po  hu.po  ka.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po  uz.po  zh_CN.po
protocols/: meson.build
src/: main.c  meson.build  mobile-settings-application.c  mobile-settings-debug-info.c  mobile-settings-enums.h  mobile-settings-plugin.c  mobile-settings-window.c  mobile-settings.gresource.xml  ms-alerts-panel.c  ms-alerts-panel.h  ms-audio-device-row.c  ms-audio-device-row.h  ms-audio-device.c  ms-audio-device.h  ms-audio-devices.c  ms-audio-devices.h  ms-cb-message-row.c  ms-cb-message-row.h  ms-compositor-panel.c  ms-compositor-panel.h  ms-convergence-panel.c  ms-convergence-panel.h  ms-features-panel.c  ms-features-panel.h  ms-feedback-panel.c  ms-feedback-panel.h  ms-head-tracker.c  ms-head-tracker.h  ms-lockscreen-panel.c  ms-lockscreen-panel.h  ms-main.c  ms-main.h  ms-osk-layout-prefs.c  ms-osk-layout.c  ms-osk-panel.c  ms-osk-panel.h  ms-overview-panel.c  ms-overview-panel.h  ms-panel-switcher.c  ms-panel-switcher.h  (+11 more)
src/dbus/: meson.build
src/pmos-tweaks/: README.md  meson.build  ms-tweaks-backend-interface.c  ms-tweaks-backend-interface.h  ms-tweaks-callback-handlers.c  ms-tweaks-callback-handlers.h  ms-tweaks-gtk-utils.c  ms-tweaks-gtk-utils.h  ms-tweaks-mappings.c  ms-tweaks-mappings.h  ms-tweaks-page-builder.c  ms-tweaks-page-builder.h  ms-tweaks-parser.c  ms-tweaks-parser.h  ms-tweaks-utils.c  ms-tweaks-utils.h
src/search-provider/: meson.build  mobi.phosh.MobileSettings.search-provider.ini  mobi.phosh.MobileSettings.service.in  ms-search-provider-app.c  ms-search-provider-app.h  ms-search-provider.c  ms-search-provider.h
src/ui/: mobile-settings-window.ui  ms-alerts-panel.ui  ms-audio-device-row.ui  ms-cb-message-row.ui  ms-compositor-panel.ui  ms-convergence-panel.ui  ms-features-panel.ui  ms-feedback-panel.ui  ms-lockscreen-panel.ui  ms-osk-panel.ui  ms-overview-panel.ui  ms-sensor-panel.ui  ms-sound-row.ui  ms-topbar-panel.ui
subprojects/: gmobile.wrap  libcellbroadcast.wrap
tests/: meson.build  test-tweaks-gtk-utils.c  test-tweaks-mappings.c  test-tweaks-page-builder.c  test-tweaks-parser.c  test-tweaks-utils.c
tests/utils/: meson.build  ms-tweaks-backend-dummy.c  ms-tweaks-backend-dummy.h
